--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 
 .card-pic {
 	max-width: 100%;
-	padding: 1px 1px 1px 1px;
+	padding: 1px;
 }
 
 .card {
@@ -19,13 +19,13 @@ body {
 }
 
 .animal-info {
-	height: 100%;
+	height: 310px;
 	padding: 10px 10px;
 	border: 1px solid #FF4C02;
 }
 
 .card-container {
-	height: 310px;
+	height: 100%;
 	border-radius: .rem;
 	border: 3px solid #FF4C02;
 	background-color: #F8F8F8;
