--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 .card-container {
-	height: 100%;
+	height: 700px;
 	border-radius: .rem;
 	border: 3px solid #FF4C02;
 	background-color: #F8F8F8;
